# brokenclaw

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
brokenclaw/: auth.py  config.py  exceptions.py  http_client.py  main.py  mcp_server.py  slack_auth.py
brokenclaw/models/: calendar.py  canvas.py  common.py  contacts.py  docs.py  drive.py  forms.py  gemini.py  github.py  gmail.py  instagram.py  linkedin.py  maps.py  news.py  sheets.py  slack.py  slides.py  tasks.py  wolfram.py  youtube.py
brokenclaw/routers/: calendar.py  canvas.py  contacts.py  docs.py  drive.py  forms.py  gemini.py  github.py  gmail.py  instagram.py  linkedin.py  maps.py  news.py  sheets.py  slack.py  slides.py  tasks.py  wolfram.py  youtube.py
brokenclaw/services/: calendar.py  canvas.py  canvas_auth.py  canvas_client.py  contacts.py  docs.py  drive.py  forms.py  gemini.py  github.py  gmail.py  instagram.py  instagram_auth.py  instagram_client.py  linkedin.py  linkedin_auth.py  linkedin_client.py  maps.py  news.py  sheets.py  (+7 more)
tests/: conftest.py  test_calendar.py  test_canvas.py  test_contacts.py  test_docs.py  test_drive.py  test_forms.py  test_github.py  test_gmail.py  test_instagram.py  test_linkedin.py  test_maps.py  test_mcp_drive.py  test_mcp_gmail.py  test_mcp_sheets.py  test_news.py  test_routers_drive.py  test_routers_gmail.py  test_routers_sheets.py  test_services_drive.py  test_services_gmail.py  test_services_sheets.py  test_sheets.py  test_slack.py  test_slides.py  test_tasks.py  test_wolfram.py  test_youtube.py
(+2 files in other folders)
