[project]
name = "brokenclaw"
version = "0.1.0"
description = "Integration server for AI agents — REST API + MCP tool server"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "starlette",
    "fastmcp>=2.0",
    "pydantic-settings",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "requests",
    "icalendar",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock", "httpx"]

[project.scripts]
brokenclaw = "brokenclaw.main:run"
